WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134367
[MSE][Mac] Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::buffered const + 13
https://bugs.webkit.org/show_bug.cgi?id=134367
Summary
[MSE][Mac] Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::buffered c...
Jer Noble
Reported
2014-06-26 16:38:10 PDT
[MSE][Mac] Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::buffered const + 13
Attachments
Patch
(2.23 KB, patch)
2014-06-26 16:42 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-06-26 16:39:31 PDT
<
rdar://problem/15835198
>
Jer Noble
Comment 2
2014-06-26 16:42:01 PDT
Created
attachment 233944
[details]
Patch
WebKit Commit Bot
Comment 3
2014-06-26 17:28:39 PDT
Comment on
attachment 233944
[details]
Patch Clearing flags on attachment: 233944 Committed
r170512
: <
http://trac.webkit.org/changeset/170512
>
WebKit Commit Bot
Comment 4
2014-06-26 17:28:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug