[MSE][Mac] Crash in WebCore::MediaPlayerPrivateMediaSourceAVFObjC::buffered const + 13 https://bugs.webkit.org/show_bug.cgi?id=134367

Reviewed by Darin Adler.

Add a couple of null-checks to protect against methods being called in the brief time
between when the object is created and when it's asked to load.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::durationDouble):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::buffered):


Canonical link: https://commits.webkit.org/152352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170512 268f45cc-cd09-0410-ab3c-d52691b4dbfc